<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.schoolimpact.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.schoolimpact.ui.main.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_major_list" >
        <action
            android:id="@+id/action_navigation_discover_to_navigation_detail_major"
            app:destination="@id/navigation_detail_major" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.schoolimpact.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_detail_major"
        android:name="com.example.schoolimpact.ui.main.discover.detail.MajorDetailFragment"
        android:label="@string/title_major_detail"
        tools:layout="@layout/fragment_major_detail" />
    <fragment
        android:id="@+id/majorListFragment"
        android:name="com.example.schoolimpact.ui.main.discover.major.MajorListFragment"
        android:label="MajorListFragment" />
</navigation>